[package]
name = "drivedriverb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"]}
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"]}
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
toml = "0.8.20"
walkdir = "2.5.0"

